[package]
name = "contract-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = "1.20.1"
hex = "0.4.3"
secp256k1 = { version= "0.21.0", features = ["recovery"]}
thiserror = "1.0"
serde = "1.0.143"
serde_json = "1.0.83"
async-trait = "0.1.57"